/* Ficheiro htmessages.proto */
syntax = "proto3";

message entry_t /* Formato da mensagem EntryT */
{
    string key = 1;
    bytes value = 2;
}

message statistics_t /* Formato da mensagem StatisticsT */
{
    sint32 total_ops = 1;  // Total de operaciones realizadas
    sint32 total_time = 2; // Tiempo total acumulado en microsegundos
    sint32 clients = 3;    // Número de clientes conectados actualmente
}

message message_t /* Formato da mensagem MessageT */
{
    enum Opcode { /* Opcodes da mensagem */
        OP_BAD = 0;
        OP_PUT = 10;
        OP_GET = 20;
        OP_DEL = 30;
        OP_SIZE = 40;
        OP_GETKEYS = 50;
        OP_GETTABLE = 60;
        OP_STATS = 70;  // Nuevo opcode para la operación stats
        OP_ERROR = 99;
    }
    enum C_type { /* Códigos para conteúdos da mensagem */
        CT_BAD = 0;
        CT_ENTRY = 10;
        CT_KEY = 20;
        CT_VALUE = 30;
        CT_RESULT = 40;
        CT_KEYS = 50;
        CT_TABLE = 60;
        CT_STATS = 65;  // Tipo de contenido para estadísticas
        CT_NONE = 70;   // Tipo de contenido sin datos adicionales
    }

    /* Campos disponíveis na mensagem genérica (cada mensagem concreta, de
    * pedido ou de resposta, usa apenas os campos que necessitar)
    */
    Opcode opcode = 1;          // Código de operación
    C_type c_type = 2;          // Código de tipo de contenido
    entry_t entry = 3;          // Par clave-valor para operaciones de entrada
    string key = 4;             // Clave para operaciones específicas
    bytes value = 5;            // Valor asociado a una clave
    sint32 result = 6;          // Resultado de una operación
    repeated string keys = 7;   // Lista de claves
    repeated entry_t entries = 8; // Lista de pares clave-valor
    statistics_t statistics = 9; // Información de estadísticas para respuesta de stats
}
